<resources>

    <string name="app_name">KoAttendance</string>

    <!-- Username -->
    <eat-comment />
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="sign_in_explanation">Coloque o seu nr. telefone, e em seguida o codigo que irá receber por SMS</string>
    <string name="next">Next</string>

    <!-- Auth -->
    <eat-comment />
    <string name="welcome">Welcome, %s!</string>
    <string name="auth_explanation">For the purpose of demonstration, the password you type is ignored.</string>
    <string name="cancelled">Cancelled</string>

    <!-- Home -->
    <string name="credentials_caption">Your registered credentials:</string>
    <string name="empty_credentials">You don\'t have any credentials.</string>
    <string name="reauth">Reauth</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this credential?\n\n%s</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ko Attendance</string>
    <string name="nav_header_subtitle">support@koattendance.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="application_name">Biometric Authentication</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="password">Password</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">
        You can proceed to purchase with this button \n even if a new fingerprint is enrolled
    </string>
    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="new_fingerprint_enrolled_description">
        A new fingerprint was added to this device, so your password is required.
    </string>
    <string name="use_fingerprint_in_future">Use biometrics in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="register_fingerprint">
        Go to \'Settings -> Security -> Fingerprint\' and register at least one fingerprint or face
    </string>
    <string name="setup_lock_screen">
        Secure lock screen hasn\'t set been up.\n
        Go to \'Settings -> Security -> Fingerprint\' to set up a fingerprint or face
    </string>
    <string name="prompt_info_title">My App\'s Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">My App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>

    <string name="register_fido2">Register FIDO2</string>
    <string name="login_fido2">Sign FIDO2</string>
    <string name="phone">Nr. Telefone</string>
    <string name="validationCode" >Codigo Validação</string>
    <string name="sign_in_explanation3">OU</string>
    <string name="validate">validar</string>
    <string name="validationAlert">Dirija-se à sua caixa de mensagens e copie o código de validação apresentado</string>
    <string name="usendit_user">mahotag</string>
    <string name="usendit_password">AgnesZoe1518!</string>
    <string name="saida_clock_out">Saida/Clock-Out</string>
    <string name="entrada_clock_in">Entrada/Clock-In</string>
    <string name="menu_auth">Register</string>

</resources>
